--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,8 +11,8 @@
       <li class="nav-item">
         <%= link_to "ABOUT", about_path %>
       </li>
-      <div class="navbar-brand nav-item" href="#">LOGO
-        <%= link_to image_tag('/images/img/log.png'), '/' %>
+      <div class="navbar-brand nav-item" href="#">
+        <%= link_to image_tag('img/log.png'), '/' %>
       </div>
       <li class="nav-item">
         <%= link_to "TV PROGRAMS", programs_path %>
@@ -22,19 +22,49 @@
       </li>
       <% elsif admin_signed_in? %>
       <li class="nav-item">管理者</li>
-      <li class="nav-item"><%= link_to "PROGRAMS", admins_programs_path %></li>
-      <li class="nav-item"><%= link_to "MEMBERS", admins_members_path %></li>
-      <li class="nav-item"><%#= link_to "CONTACT", admins_contacts_path %></li>
-      <li class="nav-item"><%= link_to "ANALISIS", admins_analysis_path %></li>
-      <li class="nav-item"><%= link_to "LOG OUT", destroy_admin_session_path, method: :delete %></li>
-      <li class="nav-item"><%= link_to "(仮)番組取得ボタン", admins_scrape_path %></li>
+      <li class="nav-item">
+        <%= link_to "PROGRAMS", admins_programs_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "MEMBERS", admins_members_path %>
+      </li>
+      <li class="nav-item">
+        <%#= link_to "CONTACT", admins_contacts_path %>
+      </li>
+      <div class="navbar-brand nav-item" href="#">
+        <%= link_to image_tag('img/log.png'), '/' %>
+      </div>
+      <li class="nav-item">
+        <%= link_to "ANALISIS", admins_analysis_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "LOG OUT", destroy_admin_session_path, method: :delete %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "(仮)番組取得ボタン", admins_scrape_path %>
+      </li>
     <% else %>
-      <li class="nav-item"><h4>ゲストユーザー<h4></li>
-      <li class="nav-item"><%= link_to "SIGN IN", new_member_registration_path %></li>
-      <li class="nav-item"><%= link_to "LOG IN", new_member_session_path %></li>
-      <li class="nav-item"><%= link_to "TOP", root_path %></li>
-      <li class="nav-item"><%= link_to "ABOUT", about_path %></li>
-      <li class="nav-item"><%= link_to "PROGRAMS", programs_path %></li>
+      <li class="nav-item">
+        <h4>ゲストユーザー<h4>
+      </li>
+      <li class="nav-item">
+        <%= link_to "SIGN IN", new_member_registration_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "LOG IN", new_member_session_path %>
+      </li>
+      <div class="navbar-brand nav-item" href="#">
+        <%= link_to image_tag('img/log.png'), '/' %>
+      </div>
+      <li class="nav-item">
+        <%= link_to "TOP", root_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "ABOUT", about_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "PROGRAMS", programs_path %>
+      </li>
     <% end %>
     </ul>
   </div>
