--- a/app/views/admins/homes/_admin_menu.html.erb
+++ b/app/views/admins/homes/_admin_menu.html.erb
@@ -14,7 +14,7 @@
 		    <%= link_to "会員一覧", admins_members_path %>
 		  </li>
 		  <li>
-		    <%= link_to "会員検索", admins_search_path %>
+		    <%= link_to "会員検索", admins_member_search_path %>
 		  </li>
 		  <li>
 		  	<%# if @unchecked_notifications.any? %>
