--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -1,49 +1,16 @@
 <div class="conteiner m-5">
   <div class="row mt-4">
     <div class="col-2">
-      <%= render partial: 'admins/homes/admin_menu' %>
+      <div class="mb-3">
+        <%= render partial: 'admins/members/search_form', locals: { search_params: @search_params } %>
+      </div>
+      <div class="mb-3">
+        <%= render partial: 'admins/homes/admin_menu' %>
+      </div>
     </div>
     <div class="col-10">
       <h4>会員一覧</h4>
-      <table class="table program">
-        <thead>
-          <tr>
-            <th></th>
-            <th>氏名(ニックネーム)</th>
-            <th>フリガナ</th>
-            <th>出身地</th>
-            <th>いいねクリック数</th>
-            <th>アクセス数</th>
-          </tr>
-        </thead>
-        <tbody>
-        <% @members.each do |member| %>
-          <tr>
-            <th class="align-middle">
-              <%= attachment_image_tag member, :profile_image, format: 'png', fallback: "img/noimage1.png", size: "60x60"%>
-            </th>
-            <th class="align-middle">
-              <%= link_to  admins_member_path(member.id)  do %>
-                <%= member.first_name + member.last_name %>(<%= member.nickname %>)
-              <% end %>
-            </th>
-            <th class="align-middle">
-              <%= member.kana_sei + member.kana_mei %>
-            </th>
-            <th class="align-middle">
-              <%= member.prefecture %>
-            </th>
-            <th class="align-middle">
-              <%= member.favorites.count %>いいね
-            </th>
-            <th class="align-middle">
-              <%= member.sign_in_count %>回
-            </th>
-          </tr>
-          <% end %>
-        </tboby>
-      </table>
-      <%= paginate @members %>
+      <%= render partial: 'admins/members/index', locals: { members: @members } %>
     </div>
   </div>
 </div>
