--- a/app/views/admins/programs/search.html.erb
+++ b/app/views/admins/programs/search.html.erb
@@ -2,8 +2,8 @@
   <div class="row mt-5">
     <div class="col-2 mx-auto">
       <%= link_to '一覧へ戻る', programs_path, class: 'btn btn-danger' %>
-      <%= render partial: 'members/programs/search_form', locals: { search_params: @search_params } %>
-      <%= render partial: 'members/members/mymenu' %>
+      <%= render partial: 'members/admins/search_form', locals: { search_params: @search_params } %>
+      <%= render partial: 'admins/homes/admin_menu' %>
     </div>
     <div class="col-8 mx-auto">
       <h2 class="text-center">検索結果</h2>
@@ -34,7 +34,7 @@
               <% end %>
             </th>
             <th>
-              <%= link_to program.title, program_path(program) %>
+              <%= link_to program.title, admins_program_path(program) %>
             </th>
             <th>
               <%= program.channel %>
@@ -56,5 +56,3 @@
     </div>
   </div>
 </div>
-
-
