--- a/app/views/members/programs/index.html.erb
+++ b/app/views/members/programs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid m-3">
   <div class="row mt-5 m-3">
     <div class="col-2">
-      <%= render partial: 'members/programs/search_form', locals: { program: @program } %>
+      <%= render partial: 'members/programs/search_form', locals: { search_params: @search_params } %>
       <%= render 'members/members/mymenu' %>
     </div>
     <div class="col-10">
