--- a/app/views/admins/homes/_favorite_analysis.html.erb
+++ b/app/views/admins/homes/_favorite_analysis.html.erb
@@ -1,6 +1,6 @@
 <canvas id="myLineChart_favorite"></canvas>
 <script>
-  $(document).on('turbolinks:load', function() {
+  $(function() {
     var ctx = document.getElementById("myLineChart_favorite");
     var myLineChart_favorite = new Chart(ctx, {
       type: 'line',
