--- a/app/views/admins/homes/_register_analysis.html.erb
+++ b/app/views/admins/homes/_register_analysis.html.erb
@@ -1,6 +1,6 @@
 <canvas id="myLineChart_register_member"></canvas>
 <script>
-  $(document).on('turbolinks:load', function() {
+  $(function() {
     var ctx = document.getElementById("myLineChart_register_member");
     var myLineChart_register_member = new Chart(ctx, {
       type: 'line',
