--- a/app/views/admins/homes/_review_analysis.html.erb
+++ b/app/views/admins/homes/_review_analysis.html.erb
@@ -1,6 +1,6 @@
 <canvas id="myLineChart_review"></canvas>
 <script>
-  $(document).on('turbolinks:load', function() {
+  $(function() {
     var ctx = document.getElementById("myLineChart_review");
     var myLineChart_review = new Chart(ctx, {
       type: 'line',
