--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
-@import "slick-theme"; 
+@import "slick-theme";
 @import "slick";
 
 *{
@@ -28,7 +28,7 @@
 
 ul,
 ol{
-	margin:0;
+	margin: 0;
 	padding: 0;
 	list-style: none;
 }
@@ -36,22 +36,35 @@ ol{
 a{
 	color: #333;
 	text-decoration: none;
-    outline: none;
+  outline: none;
+}
+
+a:visited{
+  color: #333;
+	text-decoration: none;
+  outline: none;
+}
+
+a:hover{
+  text-decoration: none;
+  color: #333;
+  background-color: transparent;
+  outline: none;
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
   .navbar-nav .nav-item {
-    padding:0 1rem;
+    padding: 0 1rem;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .navbar-nav .nav-item {
-    padding:0 2rem;
+    padding: 0 2rem;
   }
 }
 @media (min-width: 1200px) {
   .navbar-nav .nav-item {
-    padding:0 3rem;
+    padding: 0 3rem;
   }
 }
 
@@ -60,16 +73,28 @@ body{
   background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
   font-family: 'Sawarabi Gothic', sans-serif;
 	color: #333;
-	font-size:1rem;
-	line-height:1.85;
+	font-size: 1rem;
+	line-height: 1.85;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
 	word-wrap: break-word;
 }
 
-a:hover{
-　text-decoration: none;
+.card{
+  width: 640px;
+  height: 340px;
 }
 
+.card-img{
+  opacity: 0.7;
+}
+
+/* 文字を中央に揃える */
+.card-img-overlay{
+  padding: 0;
+  top: calc(50% - 1.6rem);
+  text-align: center;
+  font-weight: bold;
+}
 
