--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -3,8 +3,41 @@
     <div class="col-2">
       <%= render partial: 'admins/homes/admin_menu' %>
     </div>
-    <div class="col-10">
-      <h2>管理者toppage</h2>
+    <div class="col-10 mx-auto">
+      <h2>管理者画面</h2>
+      <div class="mt-5">
+        <div class="col-10 mx-auto">
+          <h5>管理者用各ページの説明</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>統計値</th>
+                <th>一週間の基準で1日の「新規会員数」や「お気に入り数」の比較が確認できます。</th>
+              </tr>
+              <tr>
+                <th>会員一覧</th>
+                 <th>会員情報の一覧ページになります。</th>
+              </tr>
+              <tr>
+                <th>会員検索</th>
+                <th>会員をキーワードからお調べすることができます。</th>
+              </tr>
+              <tr>
+                <th>お問合せ一覧</th>
+                <th>会員様からのお問合せ内容が確認できます。</th>
+              </tr>
+              <tr>
+                <th>番組情報関連</th>
+                <th>番組情報の一覧ページです。こちらから各番組の詳細や編集・削除が行えます。管理者向けとして閲覧数なども把握できます。</th>
+              </tr>
+              <tr>
+                <th>ログアウト</th>
+                <th>会員様ページに入る場合は一度管理者ページをログアウトしてください。</th>
+              </tr>
+            </thead>
+          </table>
+        </div>
+      </div>
       <div>
       </div>
     </div>
