--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,13 +26,25 @@
 
 }
 
+header{
+  background-color: #FFFFFF;
+	color: #000000	;
+	font-size: 1.5rem;
+}
+
 ul,
 ol{
 	margin: 0;
 	padding: 0;
 	list-style: none;
 }
+.nav-item {
+ line-height: auto;
+}
 
+.navbar-brand {
+  padding: 0 auto;
+}
 a{
 	color: #333;
 	text-decoration: none;
@@ -71,7 +83,7 @@ a:hover{
 body{
   background-color: #FFDEE9;
   background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
-  font-family: 'Sawarabi Gothic', sans-serif;
+  font-family: AleoRegular, sans-serif;
 	color: #333;
 	font-size: 1rem;
 	line-height: 1.85;
@@ -96,5 +108,11 @@ body{
   top: calc(50% - 1.6rem);
   text-align: center;
   font-weight: bold;
+}
+
+footer{
+  background-color: #FFFFFF;
+  font-family: 'Sawarabi Gothic', sans-serif;
+	color: #000000	;
 }
 
