--- a/app/views/admins/programs/_index.html.erb
+++ b/app/views/admins/programs/_index.html.erb
@@ -1,14 +1,14 @@
 <table class="table program">
   <thead>
     <tr>
-      <th>放送状況</th>
-      <th>番組名</th>
-      <th>放送局</th>
-      <th>放送日時</th>
-      <th>最終更新</th>
-      <th>平均評価</th>
-      <th>いいね数</th>
-      <th>PV数</th>
+      <th class="col-1">放送状況</th>
+      <th class="col-2">番組名</th>
+      <th class="col-2">放送局</th>
+      <th class="col-2">放送日時</th>
+      <th class="col-2">最終更新</th>
+      <th class="col-1">平均評価</th>
+      <th class="col-1">いいね数</th>
+      <th class="col-1">PV数</th>
     </tr>
   </thead>
   <tbody>
