--- a/app/views/admins/programs/show.html.erb
+++ b/app/views/admins/programs/show.html.erb
@@ -1,20 +1,45 @@
 <div class="conteiner m-5">
   <div class="row mt-4">
-    <div class="col-3">
-      <%= link_to '番組情報を編集する', edit_admins_program_path(@program), class: 'btn btn-outline-info' %>
-      <%= link_to '番組情報を削除する', admins_program_path(@program), method: :delete, class: 'btn btn-outline-secondary' %>
-    </div>
-    <div class="col-9">
-      <h4 class="">番組詳細</h4>
-      <strong>😲<%= @time.strftime("%-H:%M") %>の情報です</strong>
-        <%= render partial: 'layouts/information', locals: { program: @program } %>
-      <div>
-        いいね数<%= @favorite.count %>
-        レビュー数<%= @program.reviews.count %>
-        レビュー平均値<%= @program.average_score %>
+    <div class="col-2">
+      <div class="mt-3">
+        <%= link_to '番組情報一覧へ戻る', admins_programs_path, class: 'btn btn-primary' %>
       </div>
-
-      <%= link_to "Back", admins_programs_path, class: "btn btn-sm btn-danger" %>
+      <div class="mt-3">
+        <%= render partial: 'admins/homes/admin_menu' %>
+      </div>
+    </div>
+    <div class="col-9 mx-auto">
+      <h2 class="">番組詳細</h2>
+      <strong>😲<%= @time.strftime("%-H:%M") %>の情報です</strong>
+      <div class="mt-3">
+        <%= link_to '番組情報を編集する', edit_admins_program_path(@program), class: 'btn btn-outline-info' %>
+        <%= link_to '番組情報を削除する', admins_program_path(@program), method: :delete, class: 'btn btn-outline-secondary' %>
+      </div>
+        <%= render partial: 'layouts/information', locals: { program: @program } %>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>いいね数</th>
+              <th>レビュー数</th>
+              <th>レビュー平均値</th>
+              <th>閲覧（PV）数</th>
+            </tr>
+            <tr>
+              <td>
+                <%= @favorite.count %>
+              </td>
+              <td>
+                <%= @program.reviews.count %>
+              </td>
+              <td>
+                <%= @program.average_score %>
+              </td>
+              <td>
+                <%= @program.view_counts.count %>
+              </th>
+            </tr>
+          </thead>
+        </table>
     </div>
   </div>
 </div>
