--- a/app/views/layouts/_information.html.erb
+++ b/app/views/layouts/_information.html.erb
@@ -1,18 +1,18 @@
-<div class="row">
+<div class="row mt-5">
   <div class="col-3">
     <%= attachment_image_tag program, :program_image, fallback: "img/noimage1.png", size: "100x100"%>
     <%= attachment_image_tag program, :program_image %>
   </div>
   <div class="col-9">
     <div class="mt-3">
-      <h5><%= program.title %>の概要</h5>
+      <h3><strong><%= program.title %></start_datetime></h3>
     </div>
   </div>
 </div>
 <table class="table program">
   <tr>
-    <th>放送状況</th>
-    <th>
+    <th class="col-3">放送状況</th>
+    <td>
       <% if Time.zone.now <= program.start_datetime %>
         <%= "放送予定" %>
       <% elsif Time.zone.now.between?(program.start_datetime, program.end_datetime) %>
@@ -20,39 +20,44 @@
       <% elsif program.end_datetime <= Time.zone.now %>
       <%= "放送終了" %>
       <% end %>
-    </th>
+    </td>
   </tr>
   <tr>
-    <th class="col-4">番組名</th>
-    <th><%= program.title %></th>
+    <th>番組名</th>
+    <td>
+      <%= program.title %>
+    </td>
   </tr>
   <tr>
     <th>サブタイトル</th>
-    <th><%= program.second_title %></th>
+    <td>
+      <%= program.second_title %>
+    </td>
   </tr>
   <tr>
     <th>放送カテゴリー</th>
-    <!--カテゴリーは複数格納しているため配列をeachメソッドを使用して取得する-->
-    <!--カテゴリー別検索で個別で反映させるため-->
-    <th>
+    <td>
       <%= program.category %>
-      <%#= program.category.split(' ') %>
-      <%# program.category.each do |category| %>
-      <%#= category %>
-      <%# end %>
-      </th>
+    </td>
   </tr>
   <tr>
     <th>出演者情報</th>
-    <th><%= program.talent %></th>
+    <td>
+      <%= program.talent %>
+    </td>
   </tr>
-  <th>放送局</th>
-    <th><%= program.channel %></th>
+  <tr>
+    <th>放送局</th>
+    <td>
+      <%= program.channel %>
+    </td>
   </tr>
   <tr>
     <th>放送日時</th>
-    <% weeks = ["月","火","水","木","金","土","日"] %>
-    <% index = program.start_datetime.strftime("%u").to_i %>
-    <th><%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %> 〜 <%= program.end_datetime.strftime("%-H:%M") %></th>
+      <% weeks = ["月","火","水","木","金","土","日"] %>
+      <% index = program.start_datetime.strftime("%u").to_i %>
+    <td>
+      <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %> 〜 <%= program.end_datetime.strftime("%-H:%M") %>
+    </td>
   </tr>
 </table><br><br>
