--- a/app/views/members/favorites/_favorite.html.erb
+++ b/app/views/members/favorites/_favorite.html.erb
@@ -1,7 +1,8 @@
 <% if program.favorited_by?(member) %>
   <%= program.favorites.count %>
-  <%= link_to '💖', program_favorite_path(program), method: :delete, remote: true %>
+  <%= link_to '💖', program_favorite_path(program, Favorite.find_by(program: program)), method: :delete, remote: true %>
 <% else %>
    <%= program.favorites.count %>
-  <%= link_to '🖤', program_favorite_path(program), method: :post, remote: true %>
+   <%= link_to '🖤', program_favorite_path(program, Favorite.find_by(program: program)), method: :post, remote: true %>
 <% end %>
+
