--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -4,10 +4,11 @@
       <%= render partial: 'admins/homes/admin_menu' %>
     </div>
     <div class="col-10 mx-auto">
-      <h2>管理者画面</h2>
-      <div class="mt-5">
-        <div class="col-10 mx-auto">
-          <h5>管理者用各ページの説明</h5>
+      <div class="col-10 mx-auto">
+        <div class="mb-5">
+          <h2>管理者画面</h2>
+        </div>
+        <h5>管理者用各ページの説明</h5>
           <table class="table">
             <thead>
               <tr>
@@ -37,8 +38,6 @@
             </thead>
           </table>
         </div>
-      </div>
-      <div>
-      </div>
     </div>
   </div>
+</div>
