--- a/app/views/admins/members/search.html.erb
+++ b/app/views/admins/members/search.html.erb
@@ -1,17 +1,16 @@
 <div class="container-fluid">
-  <div class="row mt-5">
+  <div class="row mt-5 mb-3">
     <div class="col-2 mx-auto">
-      <%= link_to '一覧へ戻る', programs_path, class: 'btn btn-danger' %>
       <%= render partial: 'admins/members/search_form', locals: { search_params: @search_params } %>
       <%= render partial: 'admins/homes/admin_menu' %>
     </div>
     <div class="col-8 mx-auto">
-      <h2 class="text-center">検索結果</h2>
+      <h2>検索結果</h2>
       <div class="mt-3">
         <% if @members.count == 0 || @members.empty? %>
           <h2 class="text-center mt-5">検索結果はありません</h2>
         <% else %>
-        <table class="table program">
+          <table class="table program">
         <thead>
           <tr>
             <th></th>
@@ -47,7 +46,7 @@
             </th>
           </tr>
           <% end %>
-        </tboby>
+        </tbody>
         </table>
         <% end %>
       </div>
