--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -8,8 +8,8 @@
         <%= render partial: 'admins/homes/admin_menu' %>
       </div>
     </div>
-    <div class="col-10">
-      <h4>会員一覧</h4>
+    <div class="col-8 mx-auto">
+      <h2>会員一覧</h2>
       <%= render partial: 'admins/members/index', locals: { members: @members } %>
     </div>
   </div>
