--- a/app/views/admins/programs/_index.html.erb
+++ b/app/views/admins/programs/_index.html.erb
@@ -32,7 +32,7 @@
       <th>
         <% weeks = ["月","火","水","木","金","土","日"] %>
         <% index = program.start_datetime.strftime("%u").to_i %>
-        <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %>
+        <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %> 〜 <%= program.end_datetime.strftime("%-H:%M") %>
       </th>
       <th>
         <p><%= program.updated_at.strftime("%Y-%m-%d %H:%M") %></p>
