--- a/app/views/admins/programs/search.html.erb
+++ b/app/views/admins/programs/search.html.erb
@@ -1,11 +1,11 @@
 <div class="container-fluid">
-  <div class="row mt-5">
+  <div class="row mt-5 mb-3">
     <div class="col-2 mx-auto">
       <%= render partial: 'admins/programs/search_form', locals: { search_params: @search_params } %>
       <%= render partial: 'admins/homes/admin_menu' %>
     </div>
-    <div class="col-8 mx-auto">
-      <h2 class="text-center">検索結果</h2>
+    <div class="col-8 mx-auto mb-3">
+      <h2>検索結果</h2>
       <div class="row">
         <div class="col-10">
           <div class="text-right">
@@ -48,7 +48,7 @@
             <th>
               <% weeks = ["月","火","水","木","金","土","日"] %>
               <% index = program.start_datetime.strftime("%u").to_i %>
-              <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %> 〜 <%= program.start_datetime.strftime("%-H:%M") %>
+              <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %> 〜 <%= program.end_datetime.strftime("%-H:%M") %>
             </th>
             <th>
               <%= program.category %>
@@ -59,7 +59,9 @@
       </table>
       <% end %>
     </div>
-    <%= paginate @programs %>
+    <div class="">
+      <%= paginate @programs %>
+    </div>
     </div>
   </div>
 </div>
