--- a/app/views/members/members/show.html.erb
+++ b/app/views/members/members/show.html.erb
@@ -45,7 +45,7 @@
 
 
         <div class="menu-box-item flipLeftTopTrigger flipLeftTop">
-          <% if current_member.favorites.where(checked: false).any? %>
+          <% if current_member.new_notificatioin_exsist? %>
   		      <i class="fa fa-circle" style="color: gold;"></i>
   		    <% end %>
   		    <div class="box-item">
