--- a/app/views/members/members/_mymenu.html.erb
+++ b/app/views/members/members/_mymenu.html.erb
@@ -1,6 +1,6 @@
 <div class="tab-area">
   <ul class="tab">
-		<li class="active"><a href="#use">MENU</a></li>
+		<li class="active"><a href="#use">MY MENU</a></li>
 	</ul>
 	<div id="use" class="area is-active">
 		<ul>
