--- a/app/views/members/programs/search.html.erb
+++ b/app/views/members/programs/search.html.erb
@@ -53,6 +53,7 @@
           </tbody>
         </table>
         <% end %>
+        <%= paginate @programs %>
         </div>
       </div>
     </div>
