--- a/app/views/members/programs/_search_form.html.erb
+++ b/app/views/members/programs/_search_form.html.erb
@@ -2,6 +2,9 @@
 
 <%= form_with(scope: :search, url:search_programs_path, local: true, method: :get) do |f| %>
 <div class="form-group">
+  <div class="mt-5">
+    <%= f.label "キーワード", class: "form-group-label" %>
+  </div>
   <div>
     <%= f.text_field :keyword, value: @search_params[:keyword], placeholder: "投稿を検索する", class: "form-control", placeholder: "キーワードを入れてください" %>
   </div>
@@ -23,6 +26,7 @@
       <%= f.datetime_field :start_datetime_to, value: @search_params[:start_datetime_to], class: "form-control" %>
     </div>
   </div>
+
 
   <div class="text-right mt-3">
     <%= f.submit "検索", class: "btn btn-info" %>
