--- a/app/views/members/programs/search.html.erb
+++ b/app/views/members/programs/search.html.erb
@@ -1,12 +1,18 @@
 <div class="container-fluid">
   <div class="row mt-5">
     <div class="col-2 mx-auto">
-      <%= link_to '一覧へ戻る', programs_path, class: 'btn btn-danger' %>
       <%= render partial: 'members/programs/search_form', locals: { search_params: @search_params } %>
       <%= render partial: 'members/members/mymenu' %>
     </div>
     <div class="col-8 mx-auto">
       <h2 class="text-left">検索結果</h2>
+      <div class="row">
+        <div class="col-10">
+          <div class="text-right">
+            <%= link_to '番組一覧へ戻る', programs_path, class: 'btn btn-primary' %>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="mt-3">
         <% if @programs.count == 0 %>
