--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,8 @@
         <li class="nav-item">
           <%= link_to "ABOUT", about_path %>
         </li>
-        <div class="navbar-brand nav-item" href="#">
-          <%= link_to image_tag('img/logo.png'), '/about' %>
+        <div class="navbar-brand nav-item text-center" href="#">
+          <%= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/about' %>
         </div>
         <li class="nav-item">
           <%= link_to "TV PROGRAMS", programs_path %>
@@ -44,8 +44,8 @@
         <li class="nav-item">
           <%= link_to "ABOUT", about_path %>
         </li>
-        <div class="navbar-brand nav-item" href="#">
-          <%= link_to image_tag('img/logo.png'), '/about' %>
+        <div class="navbar-brand nav-item text-center" href="#">
+          <%= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/about' %>
         </div>
         <li class="nav-item">
           <%= link_to "SIGN IN", new_member_registration_path %>
