--- a/app/views/members/contacts/new.html.erb
+++ b/app/views/members/contacts/new.html.erb
@@ -12,12 +12,12 @@
       <%= form_with model: @contact, url: contacts_confirm_path, local: true, method: :post  do |f| %>
         <div class="form-group">
           <%= f.label :title, 'タイトル*' %>
-          <%= f.text_field :title, autofocus: true, class: 'form-control' %>
+          <%= f.text_field :title, autofocus: true, class: 'form-control', placeholder: "3〜30字で入力してください。" %>
         </div>
 
         <div class="form-group">
           <%= f.label :message, 'メッセージ*' %>
-          <%= f.text_area :message, size: '10x10', class: 'form-control' %>
+          <%= f.text_area :message, size: '10x10', class: 'form-control', placeholder: "5〜300字で入力してください。" %>
         </div>
 
         <div>
