--- a/app/views/members/registrations/new.html.erb
+++ b/app/views/members/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row mt-4">
     <div class="col-9 mx-auto">
       <h4>新規登録</h4>
-      <%= render "members/shared/error_messages", resource: resource %>
+      <%= devise_error_messages %>
       <%= form_with model: @member, url: registration_path(resource_name),id: 'new_member', class: 'new_member', local: true do |f| %>
 
       <div class="form-group row">
