--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -1,19 +1,19 @@
-<div class="conteiner-fuild">
-  <div class="row m-3 justify-content-around">
-    <div class="col-md-4">
-      <%= link_to members_guest_sign_in_path, method: :post do %>
-        <%= image_tag "img/home1.jpg", alt: '...' %>
-      <% end %>
+<div class="conteiner-fluid">
+  <div class="row top-row">
+    <div class="col-3 top-link">
+      <div class="image-left-text"></div>
+      <%#= link_to members_guest_sign_in_path, method: :post do %>
+      <%# end %>
     </div>
-    <div class="col-md-4">
-      <%= link_to member_session_path do %>
-        <%= image_tag "img/home2.jpg", alt: '...' %>
-      <% end %>
+    <div class="col-3 top-link">
+      <div class="image-center-text"></div>
+      <%#= link_to member_session_path do %>
+      <%# end %>
     </div>
-    <div class="col-md-4">
-      <%= link_to new_member_registration_path do %>
-        <%= image_tag "img/home3.jpg", alt: '...' %>
-      <% end %>
+    <div class="col-3 top-link">
+      <div class="image-right-text"></div>
+      <%#= link_to new_member_registration_path do %>
+      <%# end %>
     </div>
   </div>
 </div>
